subida de codigo de actividades

--- a/Examen_intento1/examen_mirsson_rosas.ipynb
+++ b/Examen_intento1/examen_mirsson_rosas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "1b2cea87",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "5eed7146",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
        "[7043 rows x 21 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,6 +645,30 @@
    "source": [
     "# observo otra columna que no hay inconsistencias\n",
     "df [\"PaymentMethod\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a1daa1ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Churn\n",
+       "No     5174\n",
+       "Yes    1869\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Churn\"].value_counts()"
    ]
   },
   {
